--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         </div>
       </div> 
 
-      <h1>Калькулятор стоимости заказа</h1>
+      <h1 class="ps-4 py-1 rounded-pill m-3 mt-5">Калькулятор стоимости заказа</h1>
       <div class="container m-auto p-3" id="calc">
         <label for="quantity">Количество:</label>
         <input class="p-1 mb-1" type="number" id="quantity" min="1" value="1">
