--- a/index.html
+++ b/index.html
@@ -254,10 +254,10 @@
         <div class = "mt-2" id="result"></div>
       </div><br>
 
+      <h2 class="py-1 rounded-pill m-3 mt-5 col-5 text-center">Зарегистрируйтесь на нашем сайте</h2>
       <!-- Форма -->
       <a id="form" class="mt-4"></a>
-      <h2 class="ps-4 py-1 rounded-pill m-3 mt-5">Зарегистрируйтесь на нашем сайте</h2>
-      <form action="test@example.com" class="needs-validation" novalidate>
+      <form action="test@example.com" class="needs-validation container col-md-12" novalidate>
         <div class="mb-3">
           <label for="name" class="form-label">ФИО:</label>
           <input type="text" id="name" class="form-control" required>
